--- a/src/components/Cmps/About/About.css
+++ b/src/components/Cmps/About/About.css
@@ -95,20 +95,25 @@
      
      @media screen and (max-width: 600px) {
 .about__me {
-    width: 65%;
-    margin: 0 auto 3rem;
+    width: 45%;
+    margin: 2rem;
+    margin-left: 8rem;
 }
 
 .about__cards {
     grid-template-columns: 1fr 1fr;
     gap: 1rem;
+    margin-top: 3rem;
+    margin-left: 12rem;
 }
 
 .about__content {
     text-align: center;
+    margin-left: 2rem;
 }
 
 .about__content p {
-    margin: 1.5rem 0;
+    margin: 2.5rem 0;
+    margin-left: 12rem;
 }
      }
