--- a/src/components/Cmps/Experience/Experience.css
+++ b/src/components/Cmps/Experience/Experience.css
@@ -34,6 +34,11 @@
     margin-top: 30px;
 }
 
+.btn1{
+    margin-left: 440px;
+    color: rgba(255, 255, 255, 0.514);
+}
+
 /* MEDIA QUERIES (TABLETS) */
 
 @media screen and (max-width: 1024px) {
