--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
 :root {
   --color-bg: #243A73;
   --color-bg-variant: #3A5BA0;
-  --color-primary: #7C3E66;
+  --color-primary: #ed7902;
   --color-primary-variant: rgba(77, 181, 255, 0.4);
   --color-white: #fff;
   --color-light: rgba(255, 255, 255, 0.6);
