--- a/src/components/Cmps/Experience/Experience.css
+++ b/src/components/Cmps/Experience/Experience.css
@@ -34,9 +34,25 @@
     margin-top: 30px;
 }
 
+.ImgExperiencia {
+    height: 200px;
+}
+
 .btn1{
-    margin-left: 440px;
     color: rgba(255, 255, 255, 0.514);
+    font-size: 18px;
+}
+
+.github_icon {
+    font-size: 1.5rem;
+    margin-left: 10px;
+
+    position: absolute;
+}
+
+.div_github {
+    margin-top: 40px;
+ text-align: center;
 }
 
 /* MEDIA QUERIES (TABLETS) */
